admin 增加查看教师详情的UI

--- a/code/admin/addTeacher.html
+++ b/code/admin/addTeacher.html
@@ -16,8 +16,8 @@
         cursor: pointer;
     }
     .addTeacher-content{
-        margin-top: 30px;
-        margin-left: 20px;
+        width: 380px;
+        margin: 30px 0 0 25px;
     }
     .message{
         overflow: hidden;
