--- a/code/common/changePassword.html
+++ b/code/common/changePassword.html
@@ -15,7 +15,7 @@
         cursor: pointer;
     }
     .changePassword-content{
-        margin-top: 30px;
+        margin: 30px 0 0 25px;
     }
     .changeMessage{
         overflow: hidden;
