--- a/code/navRole.html
+++ b/code/navRole.html
@@ -2,19 +2,21 @@
     <div class="homeContainerList">
         <div class="chartList">
             <ul>
-                <li ui-sref="index.chart1">总浏览</li>
-                <li ui-sref="index.student">学生入口</li>
+                <li ui-sref="index.charts">学生总浏览</li>
+                <li ui-sref="index.personInformation">个人信息</li>
+                <li ui-sref="index.jobInformation">工作信息</li>
             </ul>
         </div>
         <div class="chartList">
             <ul>
-                <li ui-sref="index">总浏览</li>
-                <li>教师入口</li>
+                <li ui-sref="index.charts">教师总浏览</li>
+                <li ui-sref="index.perfectInformation">完善信息</li>
+                <li ui-sref="index.manageClassroom">管理班级</li>
             </ul>
         </div>
         <div class="chartList">
             <ul>
-                <li ui-sref="index">总浏览</li>
+                <li ui-sref="index.charts">总浏览</li>
                 <li ui-sref="index.admin">管理员入口</li>
             </ul>
         </div>
