teacher 新增教师完善信息的UI

--- a/app/code/navRole.html
+++ b/app/code/navRole.html
@@ -2,22 +2,22 @@
     <div class="homeContainerList">
         <div class="chartList">
             <ul>
-                <li ui-sref="index.charts">学生总浏览</li>
-                <li ui-sref="index.personInformation">个人信息</li>
-                <li ui-sref="index.jobInformation">工作信息</li>
+                <li ng-class="{'clickThisNav':clickThisNav == 'ls1'}" ui-sref="index.charts">总揽</li>
+                <li ng-class="{'clickThisNav':clickThisNav == 'ls2'}" ui-sref="index.personInformation">个人信息</li>
+                <li ng-class="{'clickThisNav':clickThisNav == 'ls3'}" ui-sref="index.jobInformation">工作信息</li>
             </ul>
         </div>
         <div class="chartList">
             <ul>
-                <li ui-sref="index.charts">教师总浏览</li>
-                <li ui-sref="index.perfectInformation">完善信息</li>
-                <li ui-sref="index.manageClassroom">管理班级</li>
+                <li ng-class="{'clickThisNav':clickThisNav == 'ls1'}" ui-sref="index.charts">总揽</li>
+                <li ng-class="{'clickThisNav':clickThisNav == 'ls4'}" ui-sref="index.perfectInformation">完善信息</li>
+                <li ng-class="{'clickThisNav':clickThisNav == 'ls5'}" ui-sref="index.manageClassroom">管理班级</li>
             </ul>
         </div>
         <div class="chartList">
             <ul>
-                <li ui-sref="index.charts">总浏览</li>
-                <li ui-sref="index.admin">管理员入口</li>
+                <li ng-class="{'clickThisNav':clickThisNav == 'ls1'}" ui-sref="index.charts">总揽</li>
+                <li ng-class="{'clickThisNav':clickThisNav == 'ls6'}" ui-sref="index.admin">管理员入口</li>
             </ul>
         </div>
     </div>
