teacher 新增班级管理的UI

--- a/app/code/admin/adminManager.html
+++ b/app/code/admin/adminManager.html
@@ -24,7 +24,7 @@
                         <span class="table-title">姓名</span>
                     </th>
                     <th style="width: 115px;">
-                        <span class="table-title">所属院系</span>
+                        <span class="table-title">工号</span>
                     </th>
                     <th style="width: 145px;">
                         <span class="table-title">职务</span>
@@ -47,7 +47,7 @@
                         <span ng-bind="details.name"></span>
                     </td>
                     <td>
-                        <span ng-bind="details.unit"></span>
+                        <span ng-bind="details.jobNumber"></span>
                     </td>
                     <td>
                         <span ng-bind="details.position"></span>
