--- a/app/code/teacher/addStudent.html
+++ b/app/code/teacher/addStudent.html
@@ -63,7 +63,7 @@
 </style>
 <div class="addTeachers">
     <div class="addTeacher-top">
-        <div class="addTeacher-topics">添加教师</div>
+        <div class="addTeacher-topics">添加学生</div>
         <div class="close-icno">
             <i class="glyphicon glyphicon-remove" ng-click="closeThisDialog()"></i>
         </div>
@@ -76,13 +76,7 @@
             </div>
         </div>
         <div class="message">
-            <div class="message-flag">职&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;务：</div>
-            <div class="message-details">
-                <input type="text">
-            </div>
-        </div>
-        <div class="message">
-            <div class="message-flag">工&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;号：</div>
+            <div class="message-flag">学&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;号：</div>
             <div class="message-details">
                 <input type="text">
             </div>
