teacher 新增教师班级管理的UI

--- a/app/code/teacher/classroomManage.html
+++ b/app/code/teacher/classroomManage.html
@@ -64,7 +64,7 @@
                         <button class="operation-button" ng-click="cheangePassword()">修改密码</button>
                         <button class="operation-button" ng-click="seeStudentDetails()">查看信息</button>
                         <button class="operation-button" ng-click="removerTeacher()">删除</button>
-                        <button class="operation-button" ng-click="removerTeacher()">展示推荐</button>
+                        <button class="operation-button" ng-click="exhibition()">展示推荐</button>
                     </div>
                 </td>
             </tr>
