student 新增个人信息的ui

--- a/app/code/admin/seeTeacherDetails.html
+++ b/app/code/admin/seeTeacherDetails.html
@@ -1,6 +1,7 @@
 <style>
     .seeTeacherDetails{
-
+        width: 1000px;
+        height: 600px;
     }
     .seeTeacherDetails-top{
         margin: 10px;
@@ -114,8 +115,8 @@
                     <div class="teacherDetails-con" ng-bind="infor.name"></div>
                 </div>
                 <div class="teacherDetails-colRight">
-                    <div class="teacherDetails-flag">性&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;别:</div>
-                    <div class="teacherDetails-con" ng-bind="infor.gender"></div>
+                    <div class="teacherDetails-flag">政治面貌:</div>
+                    <div class="teacherDetails-con" ng-bind="infor.politicsStatus"></div>
                 </div>
             </div>
             <div class="teacherDetails-row">
