--- a/app/code/student/jobInformation.html
+++ b/app/code/student/jobInformation.html
@@ -13,23 +13,23 @@
         <table border="1" class="jobInformationTable">
             <thead>
             <tr>
-                <th style="width: 91px;">
+                <th style="width: 66px;">
                     <input type="checkbox">
                     <span class="table-title">全选</span>
                 </th>
-                <th style="width: 87px">
+                <th style="width: 65px">
                     <span class="table-title">姓名</span>
                 </th>
-                <th style="width: 115px;">
+                <th style="width: 84px;">
                     <span class="table-title">专业</span>
                 </th>
-                <th style="width: 145px;">
+                <th style="width: 105px;">
                     <span class="table-title">政治面貌</span>
                 </th>
-                <th style="width: 200px;">
-                    <span class="table-title">行业类别</span>
+                <th style="width: 425px;">
+                    <span class="table-title">工作信息</span>
                 </th>
-                <th style="width: 400px;">
+                <th style="width: 294px;">
                     <span class="table-title">操作</span>
                 </th>
             </tr>
@@ -50,7 +50,7 @@
                     <span>中共党员</span>
                 </td>
                 <td>
-                    <span>软件开发</span>
+                    <span>2013年2月至今 从事于山西大学商务学院信息学院</span>
                 </td>
                 <td>
                     <div class="operation-teacherUsers">
