--- a/app/code/student/personInformation.html
+++ b/app/code/student/personInformation.html
@@ -1,2 +1,91 @@
-<h1>personInformation.html</h1>
-<h2>{{name}}</h2>
+<!--个人信息详情-->
+<div class="seeTeacherDetails">
+    <div class="seeTeacherDetails-top">
+        <div class="seeTeacherDetails-title">学生详细信息</div>
+    </div>
+    <div class="seeTeacherDetails-content" ng-repeat="infor in personDetails">
+        <div class="teacherDetails-img" ng-if="!infor.image">
+            <img src="image/person.jpg" alt="{{infor.name}}">
+            <div class="teacherDetails-img-tips">
+                <span>该教师还没有照片</span>
+            </div>
+        </div>
+        <div class="teacherDetails-img" ng-if="infor.image">
+            <img src="{{infor.image}}" alt="{{infor.name}}">
+            <!--<div class="teacherDetails-img-tips">-->
+            <!--<span></span>-->
+            <!--</div>-->
+        </div>
+        <div class="teacherDetails-content">
+            <div class="teacherDetails-row">
+                <div class="teacherDetails-colLeft">
+                    <div class="teacherDetails-flag">姓&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;名:</div>
+                    <div class="teacherDetails-con" >
+                        <input type="text" ng-model="infor.name">
+                    </div>
+                </div>
+                <div class="teacherDetails-colRight">
+                    <div class="teacherDetails-flag">所属专业:</div>
+                    <div class="teacherDetails-con">
+                        <input type="text"  ng-model="infor.specialty">
+                    </div>
+                </div>
+            </div>
+            <div class="teacherDetails-row">
+                <div class="teacherDetails-colLeft">
+                    <div class="teacherDetails-flag">学&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;号:</div>
+                    <div class="teacherDetails-con">
+                        <input type="text" ng-model="infor.studentNumber">
+                    </div>
+                </div>
+                <div class="teacherDetails-colRight">
+                    <div class="teacherDetails-flag">是否就业:</div>
+                    <div class="teacherDetails-con">
+                        <input type="text" ng-model="infor.job">
+                    </div>
+                </div>
+            </div>
+            <div class="teacherDetails-row">
+                <div class="teacherDetails-colLeft">
+                    <div class="teacherDetails-flag">联系电话:</div>
+                    <div class="teacherDetails-con">
+                        <input type="text" ng-model="infor.phone">
+                    </div>
+                </div>
+                <div class="teacherDetails-colRight">
+                    <div class="teacherDetails-flag">工作邮箱:</div>
+                    <div class="teacherDetails-con">
+                        <input type="text" ng-model="infor.email">
+                    </div>
+                </div>
+            </div>
+            <div class="teacherDetails-row">
+                <div class="teacherDetails-colLeft">
+                    <div class="teacherDetails-flag">就业详情:</div>
+                    <div class="teacherDetails-con">
+                        <select class="teacherDetails-con-options">
+                            <option ng-repeat="clazz in infor.clazz" ng-bind="clazz.clazzName"></option>
+                        </select>
+                    </div>
+                </div>
+                <div class="teacherDetails-colRight">
+                    <div class="teacherDetails-flag">现住址:</div>
+                    <div class="teacherDetails-con">
+                        <input type="text" ng-model="infor.address">
+                    </div>
+                </div>
+            </div>
+            <div class="teacherDetails-row-textarea">
+                <div class="teacherDetails-flag">个人简介:</div>
+                <div class="teacherDetails-con">
+                    <textarea class="teacherDetails-area" ng-model="infor.intro"></textarea>
+                </div>
+            </div>
+            <div class="teacherDetails-row">
+                <div class="teacherDetails-buttons">
+                    <button class="teacherDetails-button">保存</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
