--- a/app/code/teacher/perfectInformation.html
+++ b/app/code/teacher/perfectInformation.html
@@ -29,12 +29,9 @@
                     </div>
                 </div>
                 <div class="teacherDetails-colRight">
-                    <div class="teacherDetails-flag">性&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;别:</div>
+                    <div class="teacherDetails-flag">政治面貌:</div>
                     <div class="teacherDetails-con">
-                        <input name="gender" type="radio">
-                        <span class="teacherDetails-con-radio">男</span>
-                        <input name="gender" type="radio">
-                        <span class="teacherDetails-con-radio">女</span>
+                        <input class="teacherDetails-con-text" type="text">
                     </div>
                 </div>
             </div>
