--- a/app/code/teacher/seeStudentDetails.html
+++ b/app/code/teacher/seeStudentDetails.html
@@ -1,6 +1,7 @@
 <style>
     .seeTeacherDetails{
-
+        width: 1000px;
+        height: 600px;
     }
     .seeTeacherDetails-top{
         margin: 10px;
