charts 新增首页的UI

--- a/app/code/charts/charts.html
+++ b/app/code/charts/charts.html
@@ -1,2 +1,97 @@
-<h1>charts.html</h1>
-<h2>{{name}}</h2>
+<div class="charts">
+    <div class="charts-top">
+        <div class="welcomeToCharts">欢迎进入大学毕业生跟踪调查网</div>
+        <div class="charts-title">就业总览 (2017届毕业生)</div>
+    </div>
+    <!--就业总览-->
+    <div class="charts-list">
+        <ul class="charts-list-ul">
+            <li class="charts-list-li">
+                <div class="charts-list-img">
+                    <img src="image/charts1.png" alt="">
+                </div>
+                <div class="charts-list-content">
+                    <div class="charts-list-number font-color-blue">1038</div>
+                    <div class="charts-list-units">累计毕业生(人)</div>
+                </div>
+            </li>
+            <li class="charts-list-li">
+                <div class="charts-list-img">
+                    <img src="image/charts2.png" alt="">
+                </div>
+                <div class="charts-list-content">
+                    <div class="charts-list-number font-color-purple">758</div>
+                    <div class="charts-list-units">累计就业人数(人)</div>
+                </div>
+            </li>
+            <li class="charts-list-li">
+                <div class="charts-list-img">
+                    <img src="image/charts3.png" alt="">
+                </div>
+                <div class="charts-list-content">
+                    <div class="charts-list-number font-color-green">73%</div>
+                    <div class="charts-list-units">就业率</div>
+                </div>
+            </li>
+            <li class="charts-list-li">
+                <div class="charts-list-img">
+                    <img src="image/charts4.png" alt="">
+                </div>
+                <div class="charts-list-content">
+                    <div class="charts-list-number font-color-red">3.5%</div>
+                    <div class="charts-list-units">同比就业增长率</div>
+                </div>
+            </li>
+        </ul>
+    </div>
+    <!--就业多维度统计-->
+    <div class="statistics">
+        <div class="statistics-title">
+            就业行业多维度统计
+        </div>
+        <div class="statistics-charts">
+            <ul class="statistics-charts-ul">
+                <li class="statistics-charts-li">
+                    <div class="statistics-charts-title">
+                        就业行业分布
+                    </div>
+                    <div class="statistics-charts-area"></div>
+                </li>
+                <li class="statistics-charts-li">
+                    <div class="statistics-charts-title">
+                        就业职位类别统计
+                    </div>
+                    <div class="statistics-charts-area"></div>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <!--就业率统计-->
+    <div class="statistics">
+        <div class="statistics-title">
+            就业率统计
+        </div>
+        <div class="statistics-charts">
+            <div class="statistics-charts-brokenLine">
+                <div class="statistics-brokenLine-title">
+                    就业率折线趋势图
+                </div>
+                <div class="statistics-brokenLine-area"></div>
+            </div>
+        </div>
+    </div>
+    <!--就业城市分布-->
+    <div class="statistics">
+        <div class="statistics-title">
+            就业城市分布
+        </div>
+        <div class="statistics-charts">
+            <div class="statistics-charts-brokenLine">
+                <div class="statistics-brokenLine-title">
+                    就业城市分布地图
+                </div>
+                <div class="statistics-brokenLine-area"></div>
+            </div>
+        </div>
+    </div>
+</div>
