新增权限显示

--- a/app/code/login.html
+++ b/app/code/login.html
@@ -2,6 +2,9 @@
     <div class="login-img">
         <img src="image/login-bg2.jpg" alt="">
     </div>
+    <div class="login-title">
+        欢迎进入毕业生就业跟踪调查网
+    </div>
     <div class="login-content">
         <div class="userName">
             <input type="text" class="login-input" placeholder="请输入登录名" ng-model="user.userName">
@@ -12,5 +15,8 @@
         <div class="login">
             <button class="btn btn-primary" ng-click="login(user)">登录</button>
         </div>
+    </div>
+    <div class="login-copyright">
+        &copy;版权所有syl
     </div>
 </div>
