--- a/app/code/topbar.html
+++ b/app/code/topbar.html
@@ -4,9 +4,14 @@
         <span class="topbar-title">毕业生跟踪调查网</span>
     </div>
     <div class="userLogIn">
-        <div class="logIn" ui-sref="login">
+        <div class="logIn" ui-sref="login" ng-if="!userName">
             <i class="glyphicon glyphicon-user"></i>
             <span>登陆</span>
+        </div>
+        <div class="logIn" ng-if="userName">
+            <i class="glyphicon glyphicon-user"></i>
+            <span ng-bind="userName"></span>
+            <span ng-click="clearUser()" >注销</span>
         </div>
     </div>
 </nav>
