--- a/app/code/navRole.html
+++ b/app/code/navRole.html
@@ -5,20 +5,23 @@
                 <li ng-class="{'clickThisNav':clickThisNav == 'ls1'}" ui-sref="index.charts">总揽</li>
             </ul>
         </div>
+        <!--学生-->
         <div class="chartList" ng-if="loginType == 3">
             <ul>
                 <li ng-class="{'clickThisNav':clickThisNav == 'ls1'}" ui-sref="index.charts">总揽</li>
-                <li ng-class="{'clickThisNav':clickThisNav == 'ls2'}" ui-sref="index.personInformation">个人信息</li>
+                <li ng-class="{'clickThisNav':clickThisNav == 'ls2'}" ui-sref="index.studentPersonInformation">个人信息</li>
                 <li ng-class="{'clickThisNav':clickThisNav == 'ls3'}" ui-sref="index.jobInformation">工作信息</li>
             </ul>
         </div>
+        <!--教师-->
         <div class="chartList" ng-if="loginType == 2">
             <ul>
                 <li ng-class="{'clickThisNav':clickThisNav == 'ls1'}" ui-sref="index.charts">总揽</li>
-                <li ng-class="{'clickThisNav':clickThisNav == 'ls4'}" ui-sref="index.perfectInformation">完善信息</li>
+                <li ng-class="{'clickThisNav':clickThisNav == 'ls4'}" ui-sref="index.perfectTeacherInformation">完善信息</li>
                 <li ng-class="{'clickThisNav':clickThisNav == 'ls5'}" ui-sref="index.manageClassroom">管理班级</li>
             </ul>
         </div>
+        <!--Admin-->
         <div class="chartList" ng-if="loginType == 1">
             <ul>
                 <li ng-class="{'clickThisNav':clickThisNav == 'ls1'}" ui-sref="index.charts">总揽</li>
