--- a/app/code/teacher/perfectTeacherInformation.html
+++ b/app/code/teacher/perfectTeacherInformation.html
@@ -4,6 +4,9 @@
             <i class="glyphicon glyphicon-user"></i>
             <span>教师用户完善个人信息</span>
         </div>
+        <div class="teacherInformation-changePassword">
+            <button ng-click="changeTeacherPassword()">修改密码</button>
+        </div>
     </div>
 
 
