--- a/app/code/student/jobInformation.html
+++ b/app/code/student/jobInformation.html
@@ -5,7 +5,7 @@
             <span>完善个人工作信息</span>
         </div>
         <div class="add-jobInformation">
-            <button class="add-jobInformation-button" ui-sref="index.addJobInformation">新增就业信息</button>
+            <button class="add-jobInformation-button" ui-sref="index.addJobInformation({jobId:1})">新增就业信息</button>
         </div>
     </div>
 
