--- a/app/code/teacher/manageClassroom.html
+++ b/app/code/teacher/manageClassroom.html
@@ -5,9 +5,9 @@
         </div>
         <div class="classroom-list">
             <ul>
-                <li ui-sref="index.manageClassroom.classroomManage">13软件G3班</li>
-                <li>13软件G3班</li>
-                <li>13软件G3班</li>
+                <li ui-sref="index.manageClassroom.classroomManage({className:'1301'})" ui-sref-active='activeBackgroundColor'>13软件G3班</li>
+                <li ui-sref="index.manageClassroom.classroomManage({className:'1302'})" ui-sref-active='activeBackgroundColor'>13软件G3班</li>
+                <li ui-sref="index.manageClassroom.classroomManage({className:'1303'})" ui-sref-active='activeBackgroundColor'>13软件G3班</li>
             </ul>
         </div>
     </div>
